--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ content: Nullam id dolor id nibh ultricies vehicula ut id elit. Cras mattis cons
 # Add your social links
 social:
   - platform: github
-    url: https://github.com/brianmaierjr
+    url: https://github.com/guillaumelauzier
   - platform: facebook
-    url: https://facebook.com/brianmaierjr
+    url: https://facebook.com/guillaumejlauzier
   - platform: twitter
     url: https://twitter.com/brianmaierjr
   - platform: linkedin
-    url: brianmaierjr
+    url: guillaumelauzier
 
 # General settings
 # url: http://brianmaierjr.github.com/uni
